force-app/main/default/objects/Hardware_Request__c/Hardware_Request__c.object-meta.xml
<CustomObject>
    <label>Hardware Request</label>
    <pluralLabel>Hardware Requests</pluralLabel>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Hardware Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>