force-app/main/default/objects/Hardware_Request__c/fields/Admin_Comment__c.field-meta.xml
<CustomField>
    <fullName>Admin_Comment__c</fullName>
    <label>Admin Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>