force-app/main/default/objects/Hardware_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hardware Requests</relationshipLabel>
    <relationshipName>Hardware_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>