force-app/main/default/objects/Hardware_Request__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Hardware Requests</relationshipLabel>
    <relationshipName>Hardware_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>