force-app/main/default/objects/Hardware_Request__c/fields/HR_Manager_Comment__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_Comment__c</fullName>
    <label>HR/Manager Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>