force-app/main/default/objects/Hardware_Request__c/fields/Is_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Is_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ticket</label>
    <type>Checkbox</type>
</CustomField>