force-app/main/default/objects/Hardware_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending TSA</fullName>
                <default>true</default>
                <label>Pending TSA</label>
            </value>
            <value>
                <fullName>Created Ticket</fullName>
            </value>
            <value>
                <fullName>Forwarded to Admin</fullName>
            </value>
            <value>
                <fullName>Solved by Admin</fullName>
            </value>
            <value>
                <fullName>Forwarded to HR/Manager</fullName>
            </value>
            <value>
                <fullName>Solved by HR/Manager</fullName>
            </value>
            <value>
                <fullName>Hardware will be Delivered</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>